last one begins

--- a/week15/main.tex
+++ b/week15/main.tex
@@ -48,4 +48,11 @@ Now from the equation of the plane we know that $LHS = 3$, so now $\sqrt[3]{\fra
 Finally, since the volume of this terahedron is equal to $\frac{1}{2}rst$, we know that $V \geq 7290$.
 \newline
 When the terms $\frac{5}{r}, \frac{9}{s},\frac{12}{t}$ are equal, we have $V = 7290$. Furthermore their sum is equal to 1. Therefore they are eaech a third. $r = 15, s = 27, t = 36$.
+
+
+\section{Wed Dis, 3a}
+We know that both sides of the equation is positive, so the inequality is equivalent to us taking the natural log of both sides
+$$\ln{x^x} \geq \ln{(\frac{x+1}{2})^{x+1}}$$
+$$x \ln{x} \geq (x+1)\ln{\frac{x+1}{2}}$$
+Now consider the function $y\ln(y)$ and two values $1, x$. By Jensen's inequality we have $(\ln(1)+x\ln(x))/2 \geq \frac{x+1}{2}\ln\frac{x+1}{2}$, which is identical to our initial statement when we multiply both sides by 2.
 \end{document}
