--- a/week15/main.tex
+++ b/week15/main.tex
@@ -48,11 +48,85 @@ Now from the equation of the plane we know that $LHS = 3$, so now $\sqrt[3]{\fra
 Finally, since the volume of this terahedron is equal to $\frac{1}{2}rst$, we know that $V \geq 7290$.
 \newline
 When the terms $\frac{5}{r}, \frac{9}{s},\frac{12}{t}$ are equal, we have $V = 7290$. Furthermore their sum is equal to 1. Therefore they are eaech a third. $r = 15, s = 27, t = 36$.
+\newpage
 
+
+\section{Mon Dis, 5c}
+If two functions are convex, then their second derivatives must be non-negative. Then the sum must have a second derivatie that i also non-negative. Therefore this sum must also be convex.
+
+\newpage
+
+\section{Wed Lec, 2}
+\subsection{c}
+$g(0)=1$, $g(1) = 1$. The second derivative of $\frac{1}{x+1}$ is $\frac{1}{(x+1)^3}$, which on the domain of $[0,1]$, is positive. The second half to the function is linear and therefore convex. The sum of two convex functions is also convex, thus $g$ is convex on $[0,1]$
+\newline
+By the convex function theorem the maximum of $g$ on $[0,1]$ is $1$, so $g(x)\leq 1$.
+
+\subsection{e}
+We can first fix $b, c$ in $[0,1]$, in this case our function consists of a constant, a linear function, and two convex functions (from $c$ we know that the second derivative of fractional functions is positive).
+Thus by our theorem that the sum of convex functions is convex, the original function is also convex.
+\newline
+Now we find the values of these functions at the end points: $f(0) = 1, f(1) = 1$. The above is true also for fixed $a,b$ or $a,c$, thus the original is maximized when they are either $0$ or $1$. Finally we can use the convex theorem to state that the original function must be less than or equal to $1$ on the domain $[0,1]$.
+
+
+\section{Wed Lec, 4}
+\subsection{b}
+$f(x) = \frac{1}{x}$. Its second derivative is positive for $x>0$. By JI,
+$$\frac{f(x_1)+f(x_2)+...+f(x_n)}{n} \geq f(\frac{x_1+x_2+...+x_n}{n})$$
+$$\frac{\frac{1}{x_1}+...+\frac{1}{x_n}}{n} \geq \frac{n}{x_1+x_2+...+x_n}$$
+The above inequality is equivalent to
+$$\frac{n}{\frac{1}{x_1}+...+\frac{1}{x_n}} \leq \frac{x_1+x_2+...+x_n}{n}$$
+, which is true due to the Arithmetic-Harmonic mean inequality.
+
+\subsection{c}
+$f(x) = x^{7/3}$. Its second derivative is positive for $x>0$. By JI,
+$$\frac{f(x_1)+f(x_2)+...+f(x_n)}{n} \geq f(\frac{x_1+x_2+...+x_n}{n})$$
+$$\frac{x_1^{\frac{7}{3}} + ... x_n^{\frac{7}{3}}}{n} \geq (\frac{x_1+x_2+...+x_n}{n})^{\frac{7}{3}}$$
+The above inequality is equivalent to
+$$(\frac{x_1^{\frac{7}{3}} + ... x_n^{\frac{7}{3}}}{n})^{\frac{3}{7}}\geq \frac{x_1+x_2+...+x_n}{n}$$
+, which is true due to the Arithmetic-Power mean inequality. This power mean is equal to $\frac{7}{3} > 1$, so it is greater than or equal to the arithmetic mean.
+
+\section{Wed Lec, 5c}
+Per the algebraic definition for convex functions: $(\lambda x_1+(1- \lambda)x_2) \geq \lambda f(x_1)+(1- \lambda)f(x_2)$
+By our assumption $\frac{f(x_1)+f(x_2)+f(x_3)+f(x_4)}{4} \geq f(\frac{x_1+x_2+x_3+x_4}{4})$
+\newline
+$\frac{x_1+x_2+x_3+x_4+x_5}{5} = \frac{4}{5}\frac{x_1+x_2+x_3+x_4}{4} + \frac{x_5}{5}$. let $\lambda = \frac{4}{5}$, and since the function is convex we have
+$$f(\frac{x_1+x_2+x_3+x_4+x_5}{5}) = \lambda f(y_1)+(1- \lambda)f(y_2) \leq (\lambda f(y_1)+(1- \lambda)f(y_2))$$
+$$ = \frac{4}{5}f(x_1+x_2+x_3+x_4) + \frac{1}{5}f(x_5) $$
+Now by our inductive hypothesis the last term is less than or equal to $\frac{4}{5}\frac{f(x_1)+f(x_2)+f(x_3)+f(x_4)}{4} + \frac{f(x_5)}{5} = \frac{f(x_1)+f(x_2)+f(x_3)+f(x_4)+f(x_5)}{5}$
+Thus we have shown that
+$$f(\frac{x_1+x_2+x_3+x_4+x_5}{5}) \leq \frac{f(x_1)+f(x_2)+f(x_3)+f(x_4)+f(x_5)}{5}$$
+And our proof is complete.
+\newpage
 
 \section{Wed Dis, 3a}
 We know that both sides of the equation is positive, so the inequality is equivalent to us taking the natural log of both sides
 $$\ln{x^x} \geq \ln{(\frac{x+1}{2})^{x+1}}$$
 $$x \ln{x} \geq (x+1)\ln{\frac{x+1}{2}}$$
 Now consider the function $y\ln(y)$ and two values $1, x$. By Jensen's inequality we have $(\ln(1)+x\ln(x))/2 \geq \frac{x+1}{2}\ln\frac{x+1}{2}$, which is identical to our initial statement when we multiply both sides by 2.
+
+\newpage
+
+\section{Friday Lec, 2}
+\subsection{a}
+$x_1 = 10, x_2 = 36, x_3 = 74$.
+$$AM = \frac{x_1+x_2+x_3}{3} = 40$$
+$$HM = \frac{3}{\frac{1}{10} + \frac{1}{36} + \frac{1}{74}} = \frac{19980}{941} \approx 21.2 < AM$$
+Property holds.
+
+\subsection{b}
+$$x_1 = 10, x_2 = 36, x_3 = 74, AM = 40, HM \approx 21.2$$
+$$x_1 = 10, x_2 = 40, x_3 = 70, AM = 40, HM \approx 21.5$$
+$$x_1 = 40, x_2 = 40, x_3 = 40, AM = 40, HM = 40$$
+Performed this operation twice.
+
+\subsection{c}
+Given $x_1<a<x_2$, we compute $x_1+x_2-a+a = x_1+x_2$. Therefore the sum of these two before and after the operation is the same, and the arithmetic change remains constant.
+\newline
+Now consider $\frac{1}{x_1}+\frac{1}{x_2} = \frac{x_1+x_2}{x_1x_2}$. $\frac{1}{a}+\frac{1}{x_1+x_2-a} = \frac{x_1+x_1}{x_1a+x_2a-a^2}$. In order to compare the size of the denominators, we take their difference: $x_1x_2 -(x_1a+x_2a-a^2) = (x_1)(x_2-a) - a(x_2-a) = (x_2-a)(x_1-a) $. Since $x_1<a<x_2$, the difference is negative.
+Thus the denominator of the latter is larger, so $\frac{1}{x_1}+\frac{1}{x_2}>\frac{1}{a}+\frac{1}{x_1+x_2-a}$
+
+\subsection{d}
+This smoothing proccess eventually stops when all terms are equal to the arithmetic mean, or when all the terms are the same. This process means that for any number, we have a process in which we can inrease its harmonic mean and eventually be equal to the arithmetic mean.
+This process implies that the harmonic mean is less than or equal to the arithmetic mean, otherwise this process would have been erroneous. Therefore it proves the AM-HM inequality.
 \end{document}
